Configurar el pmd para el proyecto
Configurados los 3 proyectos.

Refaztorizar todos los ficheros para cumplir con las normas de PMD.

close #13